--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>资网</title>
 
     <link rel="stylesheet" href="css/head-footer.css">
-    <link rel="stylesheet" href="css/content.css">
+    <link rel="stylesheet" href="css/index-content.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
