--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                     <li class="active"><a href="">首页</a></li>
                     <li><a href="">全部资源</a></li>
                     <li><a href="">上传</a></li>
-                    <li><a href="">我的</a></li>
+                    <li><a href="me.html">我的</a></li>
                 </ul>
                 <!-- 最右侧用户模块 -->
                 <div class="user-info">
@@ -53,7 +53,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="" class="user-photo">
+                        <a href="user.html" class="user-photo">
                             <img src="img/user-photo.png" alt="用户头像">
                         </a>
                     </li>
