--- a/src/user.html
+++ b/src/user.html
@@ -24,10 +24,10 @@
                 </a>
                 <!-- 导航条 -->
                 <ul class="ul-nav">
-                    <li class="active"><a href="index.html">首页</a></li>
+                    <li><a href="index.html">首页</a></li>
                     <li><a href="">全部资源</a></li>
                     <li><a href="">上传</a></li>
-                    <li><a href="">我的</a></li>
+                    <li><a href="me.html">我的</a></li>
                 </ul>
                 <!-- 最右侧用户模块 -->
                 <div class="user-info">
@@ -53,7 +53,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="" class="user-photo">
+                        <a href="user.html" class="user-photo">
                             <img src="img/user-photo.png" alt="用户头像">
                         </a>
                     </li>
