--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="user.html" class="user-photo">
+                        <a href="user-info.html" class="user-photo">
                             <img src="img/user-photo.png" alt="用户头像">
                         </a>
                     </li>
