--- a/src/user-info.html
+++ b/src/user-info.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="css/head-footer.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-content.css">
+    <link rel="stylesheet" href="css/user-info-content.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 
@@ -53,7 +53,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="user.html" class="user-photo">
+                        <a href="user-info" class="user-photo">
                             <img src="img/user-photo.png" alt="用户头像">
                         </a>
                     </li>
@@ -68,13 +68,13 @@
             <div class="left-menu">
                 <ul>
                     <li>
-                        <a href="#">个人资料</a>
+                        <a href="user-info.html" class="active">个人资料</a>
                     </li>
                     <li>
-                        <a href="#">我的收藏</a>
+                        <a href="user-fork.html">我的收藏</a>
                     </li>
                     <li>
-                        <a href="#" class="active">我的关注</a>
+                        <a href="user-watch.html">我的关注</a>
                     </li>
 
                     <li>
