--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>资网</title>
 
+    <link rel="stylesheet" href="http://09x.ant.design/dist/antd.css">
     <link rel="stylesheet" href="css/head-footer.css">
     <link rel="stylesheet" href="css/index-content.css">
     <link rel="stylesheet" href="css/style.css">
@@ -17,48 +18,7 @@
     <div class="wrapper">
         <!-- 头部 -->
         <header>
-            <div class="navbar">
-                <!-- 品牌logo -->
-                <a href="index.html" class="logo-brand">
-                    <img src="img/logo-brand.png" alt="logo">
-                </a>
-                <!-- 导航条 -->
-                <ul class="ul-nav">
-                    <li class="active"><a href="">首页</a></li>
-                    <li><a href="">全部资源</a></li>
-                    <li><a href="">上传</a></li>
-                    <li><a href="me.html">我的</a></li>
-                </ul>
-                <!-- 最右侧用户模块 -->
-                <div class="user-info">
-                    <li>
-                        <a href="" class="notice">通知</a>
-                    </li>
-                    <li class="hover">
-                        <i class="fa fa-plus" id="hover-info"></i>
-                        <ul class="hover-info" style="display: none">
-                            <li>
-                                <i class="fa fa-user" aria-hidden="true"></i>
-                                <a href="./makeFriends-submit.html" target="_blank">个人中心</a>
-                            </li>
-                            <li>
-                                <i class="fa fa-cog" aria-hidden="true"></i>
-                                <a href="./makeFriends-submit.html" target="_blank">账户设置</a>
-                            </li>
-                            <li>
-                                <i class="fa fa-user" aria-hidden="true"></i>
-                                <a href="./makeFriends-submit.html" target="_blank">我的信息</a>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="user-info.html" class="user-photo">
-                            <img src="img/user-photo.png" alt="用户头像">
-                        </a>
-                    </li>
-                </div>
-            </div>
+            
         </header>
 
         <!-- 双列布局 -->
@@ -482,4 +442,8 @@
     </footer>
 </body>
 
+<script src="js/js.cookie.min.js"></script>
+<script src="js/react.js"></script>
+<script src="js/react-dom.js"></script>
+<script src="js/header.js"></script>
 </html>
