--- a/src/login.html
+++ b/src/login.html
@@ -17,6 +17,7 @@
 
     <script src="js/react.js"></script>
     <script src="js/react-dom.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/js.cookie.min.js"></script>
+    <script src="js/login2.js"></script>
 </body>
 </html>
