--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>资网</title>
 
-    <link rel="stylesheet" href="http://09x.ant.design/dist/antd.css">
     <link rel="stylesheet" href="css/head-footer.css">
     <link rel="stylesheet" href="css/index-content.css">
     <link rel="stylesheet" href="css/style.css">
@@ -17,9 +16,7 @@
 <body>
     <div class="wrapper">
         <!-- 头部 -->
-        <header>
-            
-        </header>
+        <header></header>
 
         <!-- 双列布局 -->
         <div class="content">
@@ -329,7 +326,7 @@
                 </div>
                 <!-- 用户模块 -->
                 <div class="user-module">
-                    <div class="user">
+                    <!-- <div class="user">
                         <div class="photo">
                             <img src="img/user-photo.png" alt="用户头像">
                         </div>
@@ -341,7 +338,7 @@
                         </div>
                     </div>
 
-                    <a href="#" class="upload">上传资源</a>
+                    <a href="#" class="upload">上传资源</a> -->
                 </div>
                 <!-- 热门资源 -->
                 <div class="hot-resources">
@@ -442,8 +439,9 @@
     </footer>
 </body>
 
-<script src="js/js.cookie.min.js"></script>
 <script src="js/react.js"></script>
 <script src="js/react-dom.js"></script>
+<script src="js/js.cookie.min.js"></script>
 <script src="js/header.js"></script>
+<script src="js/index.js"></script>
 </html>
