--- a/src/login.html
+++ b/src/login.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
-    <div class="wrapper" id="form"></div>
+    <header>
+        <div class="header-container">
+            <a href="index.html">首页</a>
+        </div>
+    </header>
+    <div class="wrapper" id="form">
+
+    </div>
 
 
     <script src="js/react.js"></script>
@@ -20,4 +27,5 @@
     <script src="js/js.cookie.min.js"></script>
     <script src="js/login2.js"></script>
 </body>
+
 </html>
