--- a/src/login.html
+++ b/src/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="UTF-8">
@@ -22,10 +22,10 @@
     </div>
 
 
-    <script src="js/react.js"></script>
-    <script src="js/react-dom.js"></script>
-    <script src="js/js.cookie.min.js"></script>
-    <script src="js/login2.js"></script>
+    <script src="plugin/react.js"></script>
+    <script src="plugin/react-dom.js"></script>
+    <script src="plugin/js.cookie.min.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
