--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,6 @@
                             <h1>loading...</h1>
                         </div>
                     </div>
-
-
                 </div>
             </div>
 
@@ -59,9 +57,11 @@
                     </div>
                 </div>
                 <!-- 热门资源 -->
-                <div class="hot-resources" id="hot-resources">
+                <div class="hot-resources">
                     <h3>热门资源</h3>
-                    <h2>loading...</h2>
+                    <ul id="hot-resources">
+                        <h2>loading...</h2>
+                    </ul>
                 </div>
                 <!-- 热门标签 -->
                 <div class="hot-tags">
@@ -123,6 +123,6 @@
 <script src="plugin/react-dom.js"></script>
 <script src="plugin/js.cookie.min.js"></script>
 <script src="js/header.js"></script>
-<!-- <script src="js/index.js"></script> -->
+<script src="js/index.js"></script>
 
 </html>
