--- a/src/integral.html
+++ b/src/integral.html
@@ -69,7 +69,7 @@
 			margin-left: 10px; 
 		}
 	</style>
-	<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+	<script type="text/javascript" src="plugin/jquery-3.3.1.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			 $(".integral").click(function(){
