--- a/src/school.html
+++ b/src/school.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<title>校园动态</title>
 	<link rel="stylesheet" type="text/css" href="css/school.css">
-	<script type="text/javascript" src="plugin/jquery-3.3.1.js"></script>
-	<script type="text/javascript" src="js/gettasks.js"></script>
+<script type="text/javascript" src="plugin/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="js/gettasks.js"></script>
 </head>
-
 <body>
 	<div class="header">
 		<div class="header1">
@@ -17,7 +15,7 @@
 					<li><a href="#">欢迎来到校园动态</a></li>
 					<li><a href="#" class="loginin">请登录</a></li>
 				</div>
-				<div class="rightArea">
+				<div class="rightArea">	
 					<!-- <li><a href="#">系统通知</a></li> -->
 				</div>
 			</ul>
@@ -46,7 +44,7 @@
 					<div id="qq">联系方式</div>
 					<div id="deadline">截止时间</div>
 					<div id="integral">任务积分</div>
-
+					
 				</div>
 
 			</div>
@@ -55,15 +53,9 @@
 					<ul>
 						<li>校园导航</li>
 						<li>实时热点</li>
-						<a href="#school">
-							<li>大事发声</li>
-						</a>
-						<a href="#college">
-							<li>今日趣闻</li>
-						</a>
-						<a href="#article">
-							<li>书香栏目</li>
-						</a>
+						<a href="#school"><li>大事发声</li></a>
+						<a href="#college"><li>今日趣闻</li></a>
+						<a href="#article"><li>书香栏目</li></a>
 					</ul>
 				</div>
 				<br><br><br>
@@ -86,45 +78,44 @@
 			</div>
 		</div>
 	</div>
-	</div>
-	<div class="footer">
-		<!-- 底部 -->
-		<footer>
-			<div class="wrapper">
-				<div class="link">
-					<dl>
-						<dt>网站相关</dt>
-						<dd>关于我们</dd>
-						<dd>服务条款</dd>
-						<dd>帮助中心</dd>
-						<dd>编辑器语法</dd>
-					</dl>
-					<dl>
-						<dt>常用链接</dt>
-						<dd>资网博客</dd>
-						<dd>资网论坛</dd>
-					</dl>
-					<dl>
-						<dt>联系我们</dt>
-						<dd>联系我们</dd>
-						<dd>加入我们</dd>
-						<dd>建议反馈</dd>
-					</dl>
-					<dl>
-						<dt>关注我们</dt>
-						<dd>新浪微博</dd>
-						<dd>Twitter</dd>
-					</dl>
-					<div class="license">
-						<h3>内容许可</h3>
-						<p>除特别说明外，用户内容均采用知识共享署名-非商业性使用-禁止演绎4.0 国际许可协议 (CC BY-NC-ND 4.0) 进行许可</p>
-						<p>本站由 高校资源共享平台 提供更新服务</p>
-					</div>
+</div>
+<div class="footer">
+	<!-- 底部 -->
+	<footer>
+		<div class="wrapper">
+			<div class="link">
+				<dl>
+					<dt>网站相关</dt>
+					<dd>关于我们</dd>
+					<dd>服务条款</dd>
+					<dd>帮助中心</dd>
+					<dd>编辑器语法</dd>
+				</dl>
+				<dl>
+					<dt>常用链接</dt>
+					<dd>资网博客</dd>
+					<dd>资网论坛</dd>
+				</dl>
+				<dl>
+					<dt>联系我们</dt>
+					<dd>联系我们</dd>
+					<dd>加入我们</dd>
+					<dd>建议反馈</dd>
+				</dl>
+				<dl>
+					<dt>关注我们</dt>
+					<dd>新浪微博</dd>
+					<dd>Twitter</dd>
+				</dl>
+				<div class="license">
+					<h3>内容许可</h3>
+					<p>除特别说明外，用户内容均采用知识共享署名-非商业性使用-禁止演绎4.0 国际许可协议 (CC BY-NC-ND 4.0) 进行许可</p>
+					<p>本站由 高校资源共享平台 提供更新服务</p>
 				</div>
-				<p class="copyright">Copyright © 2019 高校资源共享平台 当前版本 1.0.0</p>
 			</div>
-		</footer>
-	</div>
+			<p class="copyright">Copyright © 2019 高校资源共享平台 当前版本 1.0.0</p>
+		</div>
+	</footer>
+</div>
 </body>
-
 </html>
